@@ -24,13 +24,12 @@ import com.codenvy.api.core.rest.HttpJsonHelper;
 import com.codenvy.api.core.rest.RemoteException;
 import com.codenvy.api.core.rest.shared.dto.Link;
 import com.codenvy.api.core.util.Pair;
-import com.codenvy.api.project.server.Project;
 import com.codenvy.api.project.server.ProjectManager;
+import com.codenvy.commons.env.EnvironmentContext;
 import com.codenvy.commons.lang.ZipUtils;
+import com.codenvy.commons.user.User;
 import com.codenvy.ide.ext.java.server.internal.core.JavaProject;
 import com.codenvy.ide.ext.java.server.internal.core.search.matching.JavaSearchNameEnvironment;
-import com.codenvy.ide.maven.tools.MavenUtils;
-import com.codenvy.vfs.impl.fs.VirtualFileImpl;
 import com.google.inject.name.Named;
 
 import org.eclipse.jdt.core.IJavaProject;
@@ -64,6 +63,7 @@ import javax.ws.rs.QueryParam;
 import javax.ws.rs.WebApplicationException;
 import javax.ws.rs.core.Context;
 import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.UriBuilder;
 import javax.ws.rs.core.UriInfo;
 import java.io.File;
 import java.io.FilterInputStream;
@@ -72,7 +72,6 @@ import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URL;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -184,7 +183,7 @@ public class RestNameEnvironment {
     @Produces(MediaType.APPLICATION_JSON)
     public String findConstructorDeclarations(@QueryParam("prefix") String prefix,
                                               @QueryParam("camelcase") boolean camelCaseMatch,
-                                              @QueryParam("projectpath") String projectPath){
+                                              @QueryParam("projectpath") String projectPath) {
         JavaProject javaProject = getJavaProject(projectPath);
         JavaSearchNameEnvironment environment = new JavaSearchNameEnvironment(javaProject, null);
         JsonSearchRequester searchRequester = new JsonSearchRequester();
@@ -196,9 +195,9 @@ public class RestNameEnvironment {
     @javax.ws.rs.Path("findTypes")
     @Produces(MediaType.APPLICATION_JSON)
     public String findTypes(@QueryParam("qualifiedname") String qualifiedName, @QueryParam("findmembers") boolean findMembers,
-                            @QueryParam("camelcase")  boolean camelCaseMatch,
+                            @QueryParam("camelcase") boolean camelCaseMatch,
                             @QueryParam("searchfor") int searchFor,
-                            @QueryParam("projectpath") String projectPath){
+                            @QueryParam("projectpath") String projectPath) {
         JavaProject javaProject = getJavaProject(projectPath);
         JavaSearchNameEnvironment environment = new JavaSearchNameEnvironment(javaProject, null);
         JsonSearchRequester searchRequester = new JsonSearchRequester();
@@ -210,8 +209,8 @@ public class RestNameEnvironment {
     @javax.ws.rs.Path("findExactTypes")
     @Produces(MediaType.APPLICATION_JSON)
     public String findExactTypes(@QueryParam("missingsimplename") String missingSimpleName, @QueryParam("findmembers") boolean findMembers,
-                            @QueryParam("searchfor") int searchFor,
-                            @QueryParam("projectpath") String projectPath){
+                                 @QueryParam("searchfor") int searchFor,
+                                 @QueryParam("projectpath") String projectPath) {
         JavaProject javaProject = getJavaProject(projectPath);
         JavaSearchNameEnvironment environment = new JavaSearchNameEnvironment(javaProject, null);
         JsonSearchRequester searchRequester = new JsonSearchRequester();
@@ -267,8 +266,8 @@ public class RestNameEnvironment {
     private InputStream doDownload(String downloadURL) throws IOException {
         HttpURLConnection http = null;
         try {
-            URL url = new URL(downloadURL);
-            http = (HttpURLConnection)url.openConnection();
+            URI uri = UriBuilder.fromUri(downloadURL).queryParam("token", getAuthenticationToken()).build();
+            http = (HttpURLConnection)uri.toURL().openConnection();
             http.setRequestMethod("GET");
             int responseCode = http.getResponseCode();
             if (responseCode != 200) {
@@ -286,6 +285,14 @@ public class RestNameEnvironment {
             throw ioe;
         }
 
+    }
+
+    private static String getAuthenticationToken() {
+        User user = EnvironmentContext.getCurrent().getUser();
+        if (user != null) {
+            return user.getToken();
+        }
+        return null;
     }
 
     private boolean hasPom(com.codenvy.api.project.server.Project project) {
@@ -365,7 +372,7 @@ public class RestNameEnvironment {
                     break;
                 }
             }
-            if(binding == null) return null;
+            if (binding == null) return null;
             return TypeBindingConvetror.toJsonBinaryType(binding);
         }
         return null;
